--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -4,7 +4,7 @@ name: Deploy Next.js site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: ["main", "master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,6 +24,8 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_BASE_PATH: /local-ai-chatbot-studio
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,9 +33,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: npm
+          cache: 'npm'
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        with:
+          static_site_generator: next
       - name: Install dependencies
         run: npm ci
       - name: Build with Next.js
