--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@pixi/app": "^7.4.2",
     "@pixi/core": "^7.4.2",
     "@pixi/display": "^7.4.2",
-    "@pixi/interaction": "^6.5.10",
+    "@pixi/graphics": "^7.4.2",
+    "@pixi/interaction": "^7.4.2",
+    "@pixi/sprite": "^7.4.2",
     "@pixi/ticker": "^7.4.2",
     "@pixi/utils": "^7.4.2",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -60,7 +62,7 @@
     "next": "^15.1.2",
     "next-themes": "^0.3.0",
     "pixi-live2d-display": "^0.4.0",
-    "pixi.js": "6.5.1",
+    "pixi.js": "^7.4.2",
     "postcss": "8.4.30",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
